--- a/package.json
+++ b/package.json
@@ -5,12 +5,17 @@
   "devDependencies": {
     "@htmlacademy/editorconfig-cli": "1.0.0",
     "autoprefixer": "10.4.0",
-    "browser-sync": "2.27.7",
-    "gulp": "4.0.2",
+    "browser-sync": "^2.27.11",
+    "gulp": "^3.9.1",
+    "gulp-htmlmin": "^5.0.1",
     "gulp-less": "5.0.0",
+    "gulp-libsquoosh": "^1.1.2",
     "gulp-plumber": "1.2.1",
     "gulp-postcss": "9.0.1",
+    "gulp-rename": "^2.0.0",
+    "gulp-terser": "^2.1.0",
     "postcss": "8.3.11",
+    "postcss-csso": "^6.0.1",
     "stylelint": "13.13.1",
     "stylelint-config-htmlacademy": "0.1.11"
   },
@@ -18,7 +23,7 @@
     "editorconfig": "editorconfig-cli",
     "stylelint": "stylelint \"source/less/**/*.less\" --syntax less",
     "lint": "npm run editorconfig && npm run stylelint",
-    "build": "gulp styles",
+    "build": "gulp script",
     "start": "npx gulp"
   },
   "browserslist": [
@@ -39,5 +44,8 @@
   "engines": {
     "node": "^16"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "node-fetch": "^2.6.1"
+  }
 }
